index(github_link)

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <h1 class="contact__title">Contact Me</h1>
       <h2 class="contact__email">seohk107@gmail.com</h2>
       <div class="contact__links">
-        <a href="" target="blank">
+        <a href="https://github.com/hk1070" target="blank">
           <i class="fab fa-github"></i>
         </a>
       </div>
