--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           I'm SeoHa Kim
         </h1>
         <h2 class="home__description">
-          Dreaming of becoming a front-end developer.
+          Dreaming of becoming a Front-end developer.
         </h2>
         <h4 class="home__description">
           안녕하세요. 꾸준히 성장하는 프론트엔드 개발자를 목표로 하고 있는
@@ -154,10 +154,10 @@
             <div class="skill">
               <div class="skill__description">
                 <span>React</span>
-                <span>50%</span>
+                <span>40%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 50%"></div>
+                <div class="skill__value" style="width: 40%"></div>
               </div>
             </div>
           </div>
