--- a/index.html
+++ b/index.html
@@ -252,7 +252,12 @@
               <span> HTMl, CSS , JavaScript</span>
             </div>
           </a>
-          <a href="" class="project" target="blank" data-type="mini">
+          <a
+            href="https://github.com/hk1070/React"
+            class="project"
+            target="blank"
+            data-type="mini"
+          >
             <img
               src="imgs/projects/habit.png"
               alt="Habit-Tracker"
