--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
           I'm SeoHa Kim
         </h1>
         <h2 class="home__description">
-          Dreaming of becoming a Front-end developer.
+          My goal is to become a continuously growing developer.
         </h2>
         <h4 class="home__description">
-          안녕하세요. 꾸준히 성장하는 프론트엔드 개발자를 목표로 하고 있는
-          김서하입니다.
+          안녕하세요. 꾸준히 성장하는 개발자를 목표로 하고 있는 김서하입니다.
         </h4>
         <button class="home__contact">Contact Me</button>
       </div>
