--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
           </div>
           <h2 class="about__title">React</h2>
           <p class="about__description">
-            React의 컨셉과 사용하는 툴에 대해
+            React의 컨셉에 대해 이해하고 있으며
             <br />
-            이해하고 있습니다.
+            Class 와 Function Component를
+            <br />
+            적절하게 사용할 수 있습니다.
           </p>
         </div>
       </div>
@@ -153,7 +155,7 @@
             <div class="skill">
               <div class="skill__description">
                 <span>React</span>
-                <span>40%</span>
+                <span>70%</span>
               </div>
               <div class="skill__bar">
                 <div class="skill__value" style="width: 40%"></div>
