--- a/index.html
+++ b/index.html
@@ -269,6 +269,22 @@
               <span>React</span>
             </div>
           </a>
+          <a
+            href="https://github.com/hk1070/React_Youtube"
+            class="project"
+            target="blank"
+            data-type="web"
+          >
+            <img
+              src="imgs/projects/Youtube.png"
+              alt="Youtube"
+              class="project__img"
+            />
+            <div class="project__description">
+              <h3>YouTube</h3>
+              <span>React</span>
+            </div>
+          </a>
         </div>
       </div>
     </section>
