--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn selected" data-filter="*">
-            All<span class="category__count">5</span>
+            All<span class="category__count">6</span>
           </button>
           <button class="category__btn" data-filter="web">
-            Web<span class="category__count">3</span>
+            Web<span class="category__count">4</span>
           </button>
           <button class="category__btn" data-filter="mini">
             Mini<span class="category__count">2</span>
@@ -282,7 +282,26 @@
             />
             <div class="project__description">
               <h3>YouTube</h3>
-              <span>React</span>
+              <span>React, PostCSS, Postman, Netlify</span>
+            </div>
+          </a>
+          <a
+            href=" https://github.com/hk1070/CardMaker"
+            class="project"
+            target="blank"
+            data-type="web"
+          >
+            <img
+              src="imgs/projects/cardmaker.png"
+              alt="Business Card Maker"
+              class="project__img"
+            />
+            <div class="project__description">
+              <h3>Business Card Maker</h3>
+              <span
+                >React, PostCSS, Firebase,<br />
+                Cloudinary, Netlify</span
+              >
             </div>
           </a>
         </div>
